--- a/package.json
+++ b/package.json
@@ -59,12 +59,11 @@
     "framer-motion": "^11.5.7",
     "genkit": "^1.20.0",
     "lucide-react": "^0.475.0",
-    "next": "^15.5.7",
+    "next": "16.0.7",
     "next-auth": "^4.24.13",
     "pg": "^8.16.3",
-    "react": "^18.3.1",
-    "react-day-picker": "^8.10.1",
-    "react-dom": "^18.3.1",
+    "react": "19.2.1",
+    "react-dom": "19.2.1",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
     "resend": "^6.5.2",
@@ -76,13 +75,13 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
-    "@next/eslint-plugin-next": "^16.0.7",
+    "@next/eslint-plugin-next": "16.0.7",
     "@prisma/client": "^7.1.0",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@types/bcryptjs": "^2.4.6",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "genkit-cli": "^1.20.0",
     "globals": "^16.5.0",
     "jest": "^30.2.0",
